--- a/world.html
+++ b/world.html
@@ -17,3 +17,6 @@ permalink: /credits/
   <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotanglia?ref_src=twsrc%5Etfw">East Anglia</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotbristol?ref_src=twsrc%5Etfw">Bristol</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotalba?ref_src=twsrc%5Etfw">Edinburgh</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
