--- a/credits.html
+++ b/credits.html
@@ -21,8 +21,8 @@ iCal feed:    <a href="http://dorkbotlondon.org/feeds/icalendar/">dorkbotlondon.
 
 Organised by...
 Talks curated:   Sarah Wiseman, Dan Stowell, Julie Freeman
-AV &amp; venue:      Sam Valiant, Peter Brownell, Sarah Angliss
+AV &amp; venue:      Sam Valiant, Peter Brownell
 Comms +web:      Dave Green, Gordon Joly, Oli Evans, Jonty Wareing
-Extra help:      Henry Cooke, Jo Brodie
+Extra help:      Henry Cooke, Evan Raskob, Jo Brodie
 </b>
 </pre>
