--- a/world.html
+++ b/world.html
@@ -3,6 +3,9 @@ layout: page
 title: Dorkbots around the world
 permalink: /world/
 ---
+(this isn't really intended to replace a proper list like <a href="https://web.archive.org/web/20160816043545/http://dorkbot.org>the
+  old Dorkbot hub site</a> - we'll try and add any Dorkbots across the world that are still using Twitter so you can see how recently they were active.
+  Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
 
 <h1>United Kingdom</h1>
 
