--- a/world.html
+++ b/world.html
@@ -3,10 +3,13 @@ layout: page
 title: Dorkbots around the world
 permalink: /world/
 ---
-(this isn't really intended to replace a proper list like <a href="https://web.archive.org/web/20160816043545/http://dorkbot.org">the
-  old Dorkbot hub site</a> - we'll try and add any Dorkbots across the world currently on Twitter so you can see how recently they last posted.
-  Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
+<pre>
+(this isn't - yet - aiming to replace a proper list like <a href="https://web.archive.org/web/20160816043545/http://dorkbot.org">the
+  old Dorkbot hub site</a>
+- we'll try and add the tweets of other Dorkbots across the world so you can see how recently they last posted.
 
+Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
+</pre>
 <h1>United Kingdom</h1>
 
   <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">London</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
