--- a/world.html
+++ b/world.html
@@ -4,8 +4,7 @@ title: Dorkbots around the world
 permalink: /world/
 ---
 <pre>
-(this isn't - yet - aiming to replace a proper list like <a href="https://web.archive.org/web/20160816043545/http://dorkbot.org">the
-  old Dorkbot hub site</a>
+(this isn't - yet - aiming to replace a proper list like <a href="https://web.archive.org/web/20160816043545/http://dorkbot.org">the old Dorkbot hub site</a>
 - we'll try and add the tweets of other Dorkbots across the world so you can see how recently they last posted.
 
 Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
