--- a/world.html
+++ b/world.html
@@ -9,11 +9,27 @@ NB: this isn't - yet - aiming to replace a proper list like <a href="https://web
 
 Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
 </pre>
-<h1>United Kingdom</h1>
-
+<style>
+.table{
+    display:table;
+    height: 100%;
+    width: 100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align: top;
+}
+</style>
+  <h1>United Kingdom</h1>
+<div class="table">
+        <div class="table-cell">
   <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">London</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+  </div>
+<div class="table-cell">
+          
   <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotcam?ref_src=twsrc%5Etfw">Cambridge</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+  </div>
 
  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotanglia?ref_src=twsrc%5Etfw">East Anglia</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
