--- a/world.html
+++ b/world.html
@@ -17,7 +17,7 @@ Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">plea
 }
 .table-cell{
     display:table-cell;
-    vertical-align: top;
+    vertical-align: bottom;
 }
 </style>
   <h1>United Kingdom</h1>
