--- a/world.html
+++ b/world.html
@@ -9,38 +9,89 @@ NB: this isn't - yet - aiming to replace a proper list like <a href="https://web
 
 Any other additions/suggestions - <a href="http://dorkbotlondon.org/about/">please get in touch!</a>
 </pre>
-<style>
-.table{
-    display:table;
-    height: 100%;
-    width: 100%;
-}
-.table-cell{
-    display:table-cell;
-    vertical-align: bottom;
-}
-</style>
+
   <h1>United Kingdom</h1>
-<div class="table">
-  <div class="table-cell">
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc%5Etfw">London</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-  <div class="table-cell">          
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotcam?ref_src=twsrc%5Etfw">Cambridge</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
- <div class="table-cell">          
- <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotanglia?ref_src=twsrc%5Etfw">East Anglia</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-<div class="table-cell">          
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotbristol?ref_src=twsrc%5Etfw">Bristol</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-<div class="table-cell">          
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotsheff?ref_src=twsrc%5Etfw">Sheffield</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-<div class="table-cell">          
-  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/Dorkbot_Col?ref_src=twsrc%5Etfw">Colchester</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-<div class="table-cell">          
-<a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotalba?ref_src=twsrc%5Etfw">Edinburgh</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
-</div>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotLondon?ref_src=twsrc
+
+%5Etfw">London</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotcam?ref_src=twsrc
+
+%5Etfw">Cambridge</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+ <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotanglia?ref_src=twsrc
+
+%5Etfw">East Anglia</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotbristol?ref_src=twsrc
+
+%5Etfw">Bristol</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotsheff?ref_src=twsrc
+
+%5Etfw">Sheffield</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/Dorkbot_Col?ref_src=twsrc
+
+%5Etfw">Colchester</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotCardiff?ref_src=twsrc
+
+%5Etfw">Cardiff</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotalba?ref_src=twsrc
+
+%5Etfw">Edinburgh</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <h1>Europe</h1>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotBonn?ref_src=twsrc
+
+%5Etfw">Bonn</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotmilano?ref_src=twsrc
+
+%5Etfw">Milano</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <h1>America</h1>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotsf?ref_src=twsrc%5Etfw">San 
+
+Francisco</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotPDX?ref_src=twsrc
+
+%5Etfw">Portland</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotatx?ref_src=twsrc
+
+%5Etfw">Austin, Texas</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotsea?ref_src=twsrc
+
+%5Etfw">Seattle</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotSTL?ref_src=twsrc
+
+%5Etfw">St. Louis, MO</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotindy?ref_src=twsrc
+
+%5Etfw">Indianapolis, IN</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotpgh?ref_src=twsrc
+
+%5Etfw">Pittsburgh, PA</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotcdmexico?ref_src=twsrc
+
+%5Etfw">Mexico</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/bostondorkbot?ref_src=twsrc
+
+%5Etfw">Boston</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbotCLE?ref_src=twsrc
+
+%5Etfw">Cleveland</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/baltodorkbot?ref_src=twsrc
+
+%5Etfw">Baltimore</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  <h1>Asia & Australia</h1>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotPerth?ref_src=twsrc
+
+%5Etfw">Perth</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/DorkbotBangkok?ref_src=twsrc
+
+%5Etfw">Bangkok ‏</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-tweet-limit="1" data-width="260" data-height="200" href="https://twitter.com/dorkbottokyo?ref_src=twsrc
+
+%5Etfw">Tokyo</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
