Dorkbot 95, and some tweaks.

--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@ Or join the <a href="https://www.facebook.com/groups/1494354627526302/">Facebook
 
 <b>Mailing lists</b>
 
-Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for monthly-ish updates on upcoming dorkbot events.
+Sign up to our <a href="http://eepurl.com/bCbfhn">announce list</a> for infrequent updates on upcoming dorkbot events.
 
 <b>Feeds & things</b>
 * We have an <a href="/feeds/icalendar/">iCal feed of all Dorkbot London events</a>.
-* And here's a handy button to add it to your Google calendar: <a href="https://www.google.com/calendar/render?cid=vqc1cb7ikjq6k83t2drmle9rnh2dagbh%40import.calendar.google.com"><img src="https://www.google.com/calendar/images/calendar_plus_en_GB.gif"></a>
+* And here's a handy link to add our feed to your Google calendar: <a href="https://www.google.com/calendar/render?cid=vqc1cb7ikjq6k83t2drmle9rnh2dagbh%40import.calendar.google.com">Add Dorkbot to Google Calendar</a>
 
 <b>Contact us</b>
 You can get in touch via <a href="mailto:dorkbotlondon@gmail.com">dorkbotlondon@gmail.com</a>.
