--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -18,7 +18,13 @@ Don't forget to <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter
 With short talks and demos from...
 
 <b>==== Emma Winston ====</b>
-<a href="https://emmawinston.me/">emmawinston.me</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
+
+"Tell Me I Can Fix This On My Own: songwriting with code as a non-programmer"
+
+How accidentally live-coding an album let one woman fall back in love with
+learning to program, and how (maybe) it can do the same for you.
+
+<a href="https://emmawinston.me/">emmawinston.me</a> / <a href="http://deerful.com/">deerful.com</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
 
 <b>==== Nicola Plant ====</b>
 <a href="http://nicolaplant.co.uk/">nicolaplant.co.uk</a> / <a href="https://twitter.com/nicolaplant">@nicolaplant</a>
