Add Nicola Plant's blurb

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -27,6 +27,17 @@ learning to program, and how (maybe) it can do the same for you.
 <a href="https://emmawinston.me/">emmawinston.me</a> / <a href="http://deerful.com/">deerful.com</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
 
 <b>==== Nicola Plant ====</b>
+
+"Parallax"
+
+Parallax is a movement-based interactive VR artwork. The audience communicate
+with one another by intuitively performing hand expressions and gestures that
+sculpt a shared malleable object existing in the virtual space between them.
+
+Dr Nicola Plant is a movement artist, coder and researcher with a PhD in Media
+Art and Technology at the School of Electronic Engineering and Computer
+Science, Queen Mary University of London.
+
 <a href="http://nicolaplant.co.uk/">nicolaplant.co.uk</a> / <a href="https://twitter.com/nicolaplant">@nicolaplant</a>
 
 <b>==== Annie Tådne ====</b>
