Add Annie's blurb

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -41,7 +41,16 @@ Science, Queen Mary University of London.
 <a href="http://nicolaplant.co.uk/">nicolaplant.co.uk</a> / <a href="https://twitter.com/nicolaplant">@nicolaplant</a>
 
 <b>==== Annie Tådne ====</b>
+
+"Boberg 1"
+
+Boberg 1. is a hands-on interplay between material and computational
+properties,  where music is composed through visual means. In a performance,
+physical objects are translated into sounds and controlled through manual
+calibration.
+
 <a href="https://tadne.se/">tadne.se</a>
 
 <b>==== Open dorks/demos: ====</b>
+
 You! Get in touch and let us know you'd like to give one.
