Add Jem Finer to the lineup

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -5,17 +5,27 @@ start: 2019-04-25 19:30:00
 end: 2019-04-25 22:30:00
 where: limehouse_town_hall
 tags:
+    - Jem Finer
     - Emma Winston
     - Nicola Plant
     - Annie Tådne
 ---
 
-Its been a while, but Dorkbot is back. Free entry, no registration required,
+Its been a while, but Dorkbot is back! Free entry, no registration required,
 bring your own refreshments. Talks start 7.30pm, doors from 6.45pm.
 
 Don't forget to <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a> and <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join the mailing list.</a>
 
 With short talks and demos from...
+
+<b>==== Jem Finer ====</b>
+
+"Longplayer and Supercomputer: Keeping things going"
+
+Both a question and a proposition. Both are projects which would welcome wider
+collaboration and the ingenuity that Dorkbot may bring.
+
+<a href="https://longplayer.org">longplayer.org</a> / <a href="https://supercomputer.org.uk">supercomputer.org.uk</a> / <a href="https://twitter.com/jemfiner">@jemfiner</a>
 
 <b>==== Emma Winston ====</b>
 
