--- a/_posts/2010-08-18-70.html
+++ b/_posts/2010-08-18-70.html
@@ -5,7 +5,8 @@ start: 2010-08-18 19:00
 end: 2010-08-18 22:00
 where: great_western_studios
 tags:
- - Rob and Jonty
+ - Russ Garrett
+ - Jonty Wareing
  - Iain Sharp
  - Katrin Baumgarten
 ---
@@ -14,7 +15,7 @@ Featuring the spicy and aromatic...
 <ul>
 
 <li><strong><a href="http://london.hackspace.org.uk/">Hackspace London</a></strong>
- - Rob and Jonty
+ - Russ Garrett and Jonty Wareing
 <br />Hear about London&#39;s heroic new hackspace!
 </li>
 
