People missing from list of speakers

--- a/_posts/2015-12-11-90.html
+++ b/_posts/2015-12-11-90.html
@@ -9,6 +9,11 @@ tags:
     - Julie Freeman
     - Mike Harrison
     - Bob Sturm
+    - Sophie Skach
+    - Daniel Stoller
+    - Victor Loux
+    - Betül Aksu
+    - Di Mainstone
 ---
 
 Free entry, no registration required - we have a license for this one so we'll
