Tell people what an opendork is

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -63,4 +63,4 @@ calibration.
 
 <b>==== Open dorks/demos: ====</b>
 
-You! Get in touch and let us know you'd like to give one.
+You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know you'd like to give a short five minute talk on something.
