--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -63,4 +63,5 @@ calibration.
 
 <b>==== Open dorks/demos: ====</b>
 
-You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know you'd like to give a short five minute talk on something.
+You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
+talk on something.
