--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -14,7 +14,7 @@ tags:
 Its been a while, but Dorkbot is back! Free entry, no registration required,
 bring your own refreshments. Talks start 7.30pm, doors from 6.45pm.
 
-Don't forget to <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a> and <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join the mailing list.</a>
+Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, <a href="https://www.facebook.com/events/271701030204843/">attend on the Facebook event</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
 With short talks and demos from...
 
