Add sarah and peter

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -9,6 +9,8 @@ tags:
     - Emma Winston
     - Nicola Plant
     - Annie Tådne
+    - Sara Heitlinger
+    - Peter Brownell
 ---
 
 Its been a while, but Dorkbot is back! Free entry, no registration required,
@@ -62,7 +64,19 @@ calibration.
 
 <a href="https://tadne.se/">tadne.se</a>
 
+<b>==== Sara Heitlinger ====</b>
+
+"The internet of seeds"
+
+The Connected Seeds Library is a community seed library that lives at
+Spitalfields City Farm. The library is a resource for local communities who
+wish to grow their own food from locally-adapted, open-pollinated seed.
+
+<a href="http://www.connectedseeds.org">connectedseeds.org</a>
+
 <b>==== Open dorks/demos: ====</b>
+
+* <b>Peter Brownell</b> - "How I designed a tarot deck for VISA"
 
 You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
 talk on something.
