--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -72,7 +72,7 @@ The Connected Seeds Library is a community seed library that lives at
 Spitalfields City Farm. The library is a resource for local communities who
 wish to grow their own food from locally-adapted, open-pollinated seed.
 
-<a href="http://www.connectedseeds.org">connectedseeds.org</a>
+<a href="http://www.connectedseeds.org">connectedseeds.org</a> / <a href="http://saraheitlinger.net">saraheitlinger.net</a> / <a href="https://twitter.com/saralara_heit">@saralara_heit</a>
 
 <b>==== Open dorks/demos: ====</b>
 
