Update running order, add opendorks

--- a/_posts/2019-04-25-95.html
+++ b/_posts/2019-04-25-95.html
@@ -7,10 +7,12 @@ where: limehouse_town_hall
 tags:
     - Jem Finer
     - Emma Winston
+    - Sara Heitlinger
     - Nicola Plant
     - Annie Tådne
-    - Sara Heitlinger
     - Peter Brownell
+    - Hugh Barnard
+    - Ian Morrison
 ---
 
 Its been a while, but Dorkbot is back! Free entry, no registration required,
@@ -39,6 +41,16 @@ learning to program, and how (maybe) it can do the same for you.
 
 <a href="https://emmawinston.me/">emmawinston.me</a> / <a href="http://deerful.com/">deerful.com</a> / <a href="https://twitter.com/deer_ful">@deer_ful</a>
 
+<b>==== Sara Heitlinger ====</b>
+
+"The internet of seeds"
+
+The Connected Seeds Library is a community seed library that lives at
+Spitalfields City Farm. The library is a resource for local communities who
+wish to grow their own food from locally-adapted, open-pollinated seed.
+
+<a href="http://www.connectedseeds.org">connectedseeds.org</a> / <a href="http://saraheitlinger.net">saraheitlinger.net</a> / <a href="https://twitter.com/saralara_heit">@saralara_heit</a>
+
 <b>==== Nicola Plant ====</b>
 
 "Parallax"
@@ -64,19 +76,11 @@ calibration.
 
 <a href="https://tadne.se/">tadne.se</a>
 
-<b>==== Sara Heitlinger ====</b>
-
-"The internet of seeds"
-
-The Connected Seeds Library is a community seed library that lives at
-Spitalfields City Farm. The library is a resource for local communities who
-wish to grow their own food from locally-adapted, open-pollinated seed.
-
-<a href="http://www.connectedseeds.org">connectedseeds.org</a> / <a href="http://saraheitlinger.net">saraheitlinger.net</a> / <a href="https://twitter.com/saralara_heit">@saralara_heit</a>
-
 <b>==== Open dorks/demos: ====</b>
 
 * <b>Peter Brownell</b> - "How I designed a tarot deck for VISA"
+* <b>Hugh Barnard</b> - "Code Club"
+* <b>Ian Morrison</b> - "Howlcamp"
 
 You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
 talk on something.
