--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -31,11 +31,19 @@ With short talks and demos from...
 
 <b>==== Dr. Elif Ozden Yenigun ====</b>
 
-This project has emerged in the career of two researchers as a consequence of over-priced printers, and high material specs in the aerospace industry associated with expensive research costs, that lead to innovative artefacts and affordable self-built 3D printers.
+This project has emerged in the career of two researchers as a consequence of
+over-priced printers, and high material specs in the aerospace industry
+associated with expensive research costs, that lead to innovative artefacts and
+affordable self-built 3D printers.
 
-Dr. Elif Ozden Yenigun is a Senior Tutor in textiles at the Royal College of Art. She is a material scientist interested in nanoengineered aerospace composites, smart wearables, and 3D textile preforms. Her research focuses on developing cutting-edge textile-based materials and manufacturing methods that enable the design of more novel and optimized engineered systems and products.
+Dr. Elif Ozden Yenigun is a Senior Tutor in textiles at the Royal College of
+Art. She is a material scientist interested in nanoengineered aerospace
+composites, smart wearables, and 3D textile preforms. Her research focuses on
+developing cutting-edge textile-based materials and manufacturing methods that
+enable the design of more novel and optimized engineered systems and products.
 
 <a href="https://www.rca.ac.uk/more/staff/dr-elif-ozden-yenigun/">rca.ac.uk/more/staff/dr-elif-ozden-yenigun</a>
+
 
 <b>==== Open dorks/demos: ====</b>
 
