Sian/Shard descriptions

--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -19,9 +19,28 @@ With short talks and demos from...
 
 <b>==== Sian Fan ====</b>
 
+"Seeping Out: Virtuality Beyond the Screen"
+
+Sian Fan will be analysing and exploring how new technologies act as portals
+into digital realms. She will explore how the screen sits as a barrier between
+two worlds, mediating, interrupting, and ultimately dividing the physical world
+from the digital dimension. She will discuss the commonalities between digital
+spaces and dream spaces, analysing how both act as distortions of our waking
+reality, enabling escapism and for the impossible to be realised, but not
+necessarily satisfying.
+
+Sian Fan is an emerging artist working in digital media, installation and
+performance. She is currently studying a Fine Art Masters at Central Saint
+Martins. Sian works with movement, the female body and technology to explore
+and expose what it means to exist, both physically and spiritually. She
+explores the relationship between the natural and the digital through 3D
+scanning, animation and virtual reality.
+
 <a href="https://www.sianfan.com">sianfan.com</a> / <a href="https://twitter.com/sianfan">@sianfan</a>
 
 <b>==== Shardcore ====</b>
+
+"Fake it ’til you make it - creating digital lies"
 
 <a href="http://www.shardcore.org/">shardcore.org</a> / <a href="https://twitter.com/erocdrahs">@erocdrahs</a>
 
