Add blurb from Laura

--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -46,6 +46,11 @@ scanning, animation and virtual reality.
 
 <b>==== L H Trevail ====</b>
 
+“A Campfire in the Uncanny Valley”
+
+Horror and hope in tech, and how artists are making ghosts of ourselves by
+mistake.
+
 <a href="http://www.lhtrevail.co.uk/">lhtrevail.co.uk</a> / <a href="https://twitter.com/lhtrevail">@lhtrevail</a>
 
 <b>==== Dr. Elif Ozden Yenigun ====</b>
