Sian/Elif had to cancel, Scary is now talking

--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -15,28 +15,29 @@ Free entry, no registration required, bring your own refreshments. Talks start
 Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, <a href="https://www.facebook.com/events/430975437691945/">Invite friends via the Facebook event</a>, and
 <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
+
 With short talks and demos from...
 
-<b>==== Sian Fan ====</b>
+<b>==== Dr Scary Boots ====</b>
 
-"Seeping Out: Virtuality Beyond the Screen"
+"How and Why I Built A Machine That 3D Prints Shape-changing Jelly"
 
-Sian Fan will be analysing and exploring how new technologies act as portals
-into digital realms. She will explore how the screen sits as a barrier between
-two worlds, mediating, interrupting, and ultimately dividing the physical world
-from the digital dimension. She will discuss the commonalities between digital
-spaces and dream spaces, analysing how both act as distortions of our waking
-reality, enabling escapism and for the impossible to be realised, but not
-necessarily satisfying.
+Our bodies, and much of the natural world around them, are soft, flexible, and
+change in response to needs. Our human engineering is not like that. Naturally,
+I responded to this by spending 3 years building an open-source UV-curing
+extrusion based 3D printer, to make jelly forms that change shape as the
+temperature around them changes. Since it was funded by the taxpayer though the
+Engineering &amp; Physics Sciences Research Council, I figure it's my duty to
+tell you all what I did with your money.
 
-Sian Fan is an emerging artist working in digital media, installation and
-performance. She is currently studying a Fine Art Masters at Central Saint
-Martins. Sian works with movement, the female body and technology to explore
-and expose what it means to exist, both physically and spiritually. She
-explores the relationship between the natural and the digital through 3D
-scanning, animation and virtual reality.
+Scary likes making things, drawing things and knowing things. During a career
+in science communications they got to visit CERN and make a cake in the shape
+of the internet for Cerf and Khan. However, due to an allergy to insufficient
+technical detail they pivoted to do a PhD at the Bristol Centre for Functional
+Nanomaterials. In their spare time they do comedy about science and art about
+science.
 
-<a href="https://www.sianfan.com">sianfan.com</a> / <a href="https://twitter.com/sianfan">@sianfan</a>
+<a href="https://scarysciencecomedy.wordpress.com/">scarysciencecomedy.wordpress.com</a> / <a href="https://twitter.com/schrodingerskit">@schrodingerskit</a>
 
 <b>==== Shardcore ====</b>
 
@@ -52,21 +53,6 @@ Horror and hope in tech, and how artists are making ghosts of ourselves by
 mistake.
 
 <a href="http://www.lhtrevail.co.uk/">lhtrevail.co.uk</a> / <a href="https://twitter.com/lhtrevail">@lhtrevail</a>
-
-<b>==== Dr. Elif Ozden Yenigun ====</b>
-
-This project has emerged in the career of two researchers as a consequence of
-over-priced printers, and high material specs in the aerospace industry
-associated with expensive research costs, that lead to innovative artefacts and
-affordable self-built 3D printers.
-
-Dr. Elif Ozden Yenigun is a Senior Tutor in textiles at the Royal College of
-Art. She is a material scientist interested in nanoengineered aerospace
-composites, smart wearables, and 3D textile preforms. Her research focuses on
-developing cutting-edge textile-based materials and manufacturing methods that
-enable the design of more novel and optimized engineered systems and products.
-
-<a href="https://www.rca.ac.uk/more/staff/dr-elif-ozden-yenigun/">rca.ac.uk/more/staff/dr-elif-ozden-yenigun</a>
 
 
 <b>==== Open dorks/demos: ====</b>
