--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -43,6 +43,11 @@ science.
 
 "Fake it ’til you make it - creating digital lies"
 
+#deepfakes and #fakenews are going to destroy us all. Or are they? There’s only
+one way to find out!  Artist Eric Drass aka shardcore demonstrates some of his
+attempts to use neural networks to hasten the inevitable collapse of
+civilisation.
+
 <a href="http://www.shardcore.org/">shardcore.org</a> / <a href="https://twitter.com/erocdrahs">@erocdrahs</a>
 
 <b>==== L H Trevail ====</b>
