--- a/_posts/2019-07-04-96.html
+++ b/_posts/2019-07-04-96.html
@@ -5,6 +5,10 @@ start: 2019-07-04 19:30:00
 end: 2019-07-04 22:30:00
 where: limehouse_town_hall
 tags:
+    - Dr Scary Boots
+    - Shardcore
+    - L H Trevail
+    - Sebastian Löbbers
 ---
 
 July 4th: INDEPENDENCE DORK
