--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -5,6 +5,9 @@ start: 2019-09-18 19:30:00
 end: 2019-09-18 22:30:00
 where: limehouse_town_hall
 tags:
+    - Robin Baumgarten
+    - Bushra Burge
+    - Anita Chowdry
 ---
 
 Free entry, no registration required, bring your own refreshments. Talks start
