Update lineup for '97

--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -7,7 +7,9 @@ where: limehouse_town_hall
 tags:
     - Robin Baumgarten
     - Bushra Burge
-    - Anita Chowdry
+    - Evan Raskob
+    - Piers O'Hanlon
+    - Guy Baramotz
 ---
 
 Free entry, no registration required, bring your own refreshments. Talks start
@@ -43,11 +45,27 @@ a Non-Executive Director of SEIDEA tech-education startup for BAME women.
 
 <a href="http://www.bushraburge.com">bushraburge.com</a> / <a href="https://twitter.com/bushraburge">@bushraburge</a>
 
-<b>==== Anita Chowdry ====</b>
+<b>==== Piers O'Hanlon &amp; Guy Baramotz  ====</>
 
 TBA
 
-<a href="http://www.anitachowdry.com">anitachowdry.com</a>
+<b>==== Evan Raskob ====</>
+
+"Spoke: the future as a board game. A science fiction storytelling game for
+teens and adults"
+
+Spoke is a board game for understanding complex futures. It can be played by
+individuals or mixed groups. Players collaboratively conjure up future
+narratives using prompts from story element cards and the board. The cards and
+board form a distributed science fiction world that players can inhabit and
+shape to fit their own imaginations. Story elements are based on diverse
+characters, current research topics and events around the rise of automated
+manufacturing, social media, machine learning and AI.
+
+Spoke is designed for fun, futurists, scenario planners, educators and anyone
+else exploring the uncertain world of the nearly possible.
+
+<a href="http://spoke.flkr.com">spoke.flkr.com</a> / <a href="https://twitter.com/evanraskob">@evanraskob</a> / <a href=https://instagram.com/evanraskob_art">@evanraskob_art</a>
 
 
 <b>==== Open dorks/demos: ====</b>
