--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -45,11 +45,11 @@ a Non-Executive Director of SEIDEA tech-education startup for BAME women.
 
 <a href="http://www.bushraburge.com">bushraburge.com</a> / <a href="https://twitter.com/bushraburge">@bushraburge</a>
 
-<b>==== Piers O'Hanlon &amp; Guy Baramotz  ====</>
+<b>==== Piers O'Hanlon &amp; Guy Baramotz  ====</b>
 
 TBA
 
-<b>==== Evan Raskob ====</>
+<b>==== Evan Raskob ====</b>
 
 "Spoke: the future as a board game. A science fiction storytelling game for
 teens and adults"
