--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -9,7 +9,7 @@ tags:
     - Bushra Burge
     - Evan Raskob
     - Piers O'Hanlon
-    - Guy Baramotz
+    - Guy Bar Amotz
 ---
 
 Free entry, no registration required, bring your own refreshments. Talks start
@@ -29,26 +29,6 @@ by the example of Line Wobbler and Wobble Garden.
 
 <a href="https://wobblylabs.com">wobblylabs.com</a> / <a href="https://twitter.com/robin_b">@robin_b</a>
 
-<b>==== Bushra Burge ====</b>
-
-"The rollercoaster of creating of a multisensory VR-haptic wearable story using
-a considered eco-ethical design approach"
-
-Bushra Burge is the Owner and Creative Director award winning creative
-technology company BB Studio. Her background of science, technology and
-sustainable design cultivates innovation within her multi-disciplinary team. BB
-Studio's recent projects have included engaging immersive stories using virtual
-reality integrated with proprietary wearable technology.
-
-Bushra is an active advocate of empowerment of under represented groups and is
-a Non-Executive Director of SEIDEA tech-education startup for BAME women.
-
-<a href="http://www.bushraburge.com">bushraburge.com</a> / <a href="https://twitter.com/bushraburge">@bushraburge</a>
-
-<b>==== Piers O'Hanlon &amp; Guy Baramotz  ====</b>
-
-TBA
-
 <b>==== Evan Raskob ====</b>
 
 "Spoke: the future as a board game. A science fiction storytelling game for
@@ -66,6 +46,35 @@ Spoke is designed for fun, futurists, scenario planners, educators and anyone
 else exploring the uncertain world of the nearly possible.
 
 <a href="http://spoke.flkr.com">spoke.flkr.com</a> / <a href="https://twitter.com/evanraskob">@evanraskob</a> / <a href=https://instagram.com/evanraskob_art">@evanraskob_art</a>
+
+<b>==== Bushra Burge ====</b>
+
+"The rollercoaster of creating of a multisensory VR-haptic wearable story using
+a considered eco-ethical design approach"
+
+Bushra Burge is the Owner and Creative Director award winning creative
+technology company BB Studio. Her background of science, technology and
+sustainable design cultivates innovation within her multi-disciplinary team. BB
+Studio's recent projects have included engaging immersive stories using virtual
+reality integrated with proprietary wearable technology.
+
+Bushra is an active advocate of empowerment of under represented groups and is
+a Non-Executive Director of SEIDEA tech-education startup for BAME women.
+
+<a href="http://www.bushraburge.com">bushraburge.com</a> / <a href="https://twitter.com/bushraburge">@bushraburge</a>
+
+<b>==== Piers O'Hanlon &amp; Guy Bar Amotz  ====</b>
+
+Guy Bar Amotz is an installation artist and Piers O’Hanlon is a
+technologist/researcher. Together they have created a number of interactive
+projects that were exhibited in art spaces such as Tate Britain and CAC Geneva.
+Such art includes "Robo-art” and interactive media installations.
+
+They plan to bring parts of a new robot performance and let it try to explain
+why he is who he is, video documentation of other robot performances, and a
+conversation about the nature of their collaboration.
+
+<a href="http://guybaramotz.com/">guybaramotz.com</a>
 
 
 <b>==== Open dorks/demos: ====</b>
