--- a/_posts/2019-09-18-97.html
+++ b/_posts/2019-09-18-97.html
@@ -10,6 +10,7 @@ tags:
     - Evan Raskob
     - Piers O'Hanlon
     - Guy Bar Amotz
+    - Jeff Gough
 ---
 
 Free entry, no registration required, bring your own refreshments. Talks start
@@ -78,6 +79,8 @@ conversation about the nature of their collaboration.
 
 
 <b>==== Open dorks/demos: ====</b>
+
+* <a href="http://warrantyvoidifremoved.com/">Jeff Gough</a> - "Fireball launching hat"
 
 You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know if you'd like to give a short five minute
 talk on something.
