Rough lineup for the announce email

--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -5,21 +5,60 @@ start: 2019-12-19 19:30:00
 end: 2019-12-19 23:00:00
 where: limehouse_town_hall
 tags:
+    - Natalie Kane
+    - Jack Armitage
+    - Jo Franchetti
+    - Matthew Ye-King
+    - Sarah Angliss
 ---
 
 <b>DORKMAS 2019!</b>
 
-It's Christmas, so time for an extra special Dorkbot - we'll have a full bar,
-food, and music.
+It's Christmas, so time for an extra special Dorkbot - we'll have talks,
+music, and a full bar.
 
 Free entry, no registration required, bring your own refreshments. Talks start
-7.30pm, doors from 6.45pm.
+7.30pm, doors from 6.45pm. We'll probably run later than a regular Dorkbot!
 
 Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
-With short talks, demos, and live music from...
 
-<b>==== TBA ====</b>
+With short talks from...
+
+<b>==== Natalie Kane ====</b>
+
+<a href="https://ndkane.com/">ndkane.com</a> / <a href="https://twitter.com/nd_kane">@nd_kane</a>
+
+<b>==== Jack Armitage ====</b>
+
+"Craft in digital musical instrument design"
+
+<a href="http://www.jackarmitage.com/"</a>jackarmitage.com</a> / <a href="https://twitter.com/jdkarmitage">@jdkarmitage</a>
+
+<b>==== Jo Franchetti ====</b>
+
+"Have Yourself a Matrix LED Christmas!"
+
+Frivolous festive fun with winter wearables. Join Jo on an illuminated IoT
+adventure through audio recognition, APIs, surprise snakes and some substandard
+sewing. Jo is a web developer and hobbyist IoT wearables maker.
+
+<a href="https://medium.com/@jofranchetti">medium.com/jofranchetti</a> / <a href="https://twitter.com/ThisIsJoFrank">@ThisIsJoFrank</a> 
+
+
+And music from...
+
+<b>==== Matthew Yee-King ====</b>
+
+<a href="http://www.yeeking.net/index.php?location=sound">yeeking.net</a> / <a href="https://twitter.com/myeeking">@myeeking</a>
+
+<b>==== Sarah Angliss ====</b>
+
+<a href="https://www.sarahangliss.com/">sarahangliss.com</a> / <a href="https://twitter.com/sarah_angliss">@sarah_angliss</a>
+
+
+With more yet to be announced!
+
 
 <b>==== Open dorks/demos: ====</b>
 
