--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -66,7 +66,7 @@ You! <a href="mailto:dorkbotlondon@gmail.com">Get in touch</a> and let us know i
 talk on something.
 
 
-<b>==== Other things: ====</b>
+<b>==== Also: ====</b>
 
 * Please bring interesting things along - everybody is curious about your projects and ideas!
 * The bar will accept both cash and cards
