--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -15,10 +15,13 @@ tags:
 <b>DORKMAS 2019!</b>
 
 It's Christmas, so time for an extra special Dorkbot - we'll have talks,
-music, and a bar.
+music, and a bar!
 
 Free entry, no registration required, bring your own refreshments. Talks start
-7.30pm, doors from 6.45pm. We'll probably run later than a regular Dorkbot!
+7.30pm, doors from 6.45pm. We'll probably run later than a regular Dorkbot.
+
+Please feel free to bring interesting things along to show others - things
+you've built, things to play, or curiosities to discuss.
 
 Don't forget to <a href="http://dorkbotlondon.us11.list-manage.com/subscribe?u=c64ae7bbb8eb1249be8ca8fa6&id=e2a9f9039c">join our mailing list</a>, and <a href='https://twitter.com/DorkbotLondon'>follow us on Twitter</a>.
 
@@ -57,7 +60,7 @@ And music from...
 <a href="https://www.sarahangliss.com/">sarahangliss.com</a> / <a href="https://twitter.com/sarah_angliss">@sarah_angliss</a>
 
 
-With more yet to be announced!
+With more to be announced, including the traditional Dorkmas thing-making activity!
 
 
 <b>==== Open dorks/demos: ====</b>
@@ -68,6 +71,5 @@ talk on something.
 
 <b>==== Also: ====</b>
 
-* Please bring interesting things along - everybody is curious about your projects and ideas!
 * The bar will accept both cash and cards
 
