--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -15,7 +15,7 @@ tags:
 <b>DORKMAS 2019!</b>
 
 It's Christmas, so time for an extra special Dorkbot - we'll have talks,
-music, and a bar!
+music, and a bar.
 
 Free entry, no registration required, bring your own refreshments. Talks start
 7.30pm, doors from 6.45pm. We'll probably run later than a regular Dorkbot.
