--- a/_posts/2019-12-19-98.html
+++ b/_posts/2019-12-19-98.html
@@ -17,8 +17,8 @@ tags:
 It's Christmas, so time for an extra special Dorkbot - we'll have talks,
 music, and a bar.
 
-Free entry, no registration required, bring your own refreshments. Talks start
-7.30pm, doors from 6.45pm. We'll probably run later than a regular Dorkbot.
+Free entry, no registration required. Talks start 7.30pm, doors from
+6.45pm. We'll probably run later than a regular Dorkbot.
 
 Please feel free to bring interesting things along to show others - things
 you've built, things to play, or curiosities to discuss.
